--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VisorDeComics" />
+        <activity android:name=".VisorDeComics"
+         />
         <activity android:name=".links"></activity>
         <activity android:name=".paginaweb"></activity>
 
