--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".inicio">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VisorDeComics"
-         />
-        <activity android:name=".links"></activity>
-        <activity android:name=".paginaweb"></activity>
-
-
+        <activity android:name=".VisorDeComics" />
+        <activity android:name=".links" />
+        <activity android:name=".paginaweb" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
